--- a/pages/form/form.wxss
+++ b/pages/form/form.wxss
@@ -285,12 +285,11 @@ view {
   content: '';
   position: absolute;
   width: 100%;
-  height: 14rpx;
+  height: .55rem;
   display: block;
   left: 0;
   right: 0;
   bottom: 0;
-  padding-bottom: 14rpx;
   line-height: 0;
   background-repeat: repeat-x;
   background-size: auto 100%;
