--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,4 @@
 <!--指数-->
-<!--8888999-->
 <wxs module="common" src="../../utils/common.wxs"></wxs>
 <view class="container page-{{curIndexTab.id}}" style="height:{{winHeight}}px">
 
@@ -723,7 +722,7 @@
         </scroll-view>
       </swiper-item>
       <!--overseas-->
-      <swiper-item>
+      <!-- <swiper-item>
         <scroll-view scroll-y="true" class="scoll-h" scroll-with-animation="true" scroll-top="{{scrolltop}}" bindscrolltolower="loadNextOverseasData">
 
            <block wx:for="{{OverseasDataList}}"> 
@@ -757,7 +756,7 @@
            </block> 
           <view class="list-loading" wx:if="{{overseasDataLoading}}">{{overseasLoadName}}</view>
         </scroll-view>
-      </swiper-item>
+      </swiper-item> -->
 
 
 
