--- a/pages/indexList/indexList.wxss
+++ b/pages/indexList/indexList.wxss
@@ -1,5 +1,15 @@
-
-
-
-
+page { background-color: #f7f7f7;}
+view,image { box-sizing: border-box; }
+.hide { display: none!important;}
+.index-links-list { text-align: left; padding: 20rpx 24rpx;}
+.index-links-list .item { width: 50%; display: inline-block; padding: 6rpx; vertical-align: top; text-align: center;}
+.index-links-list .in { background-color: #fff; box-shadow: 0 0 1px rgba(0, 0, 0, .05); padding: 55rpx 0 40rpx;}
+.index-links-list .in.hover { background-color: rgba(0, 0, 0, .02);}
+.index-links-list .icoBox { text-align: center; height: 135rpx;}
+.index-links-list .ico { max-width: 100%; width: 174rpx;}
+.index-links-list .item-app .ico { width: 219rpx;}
+.index-links-list .item-wxdata .ico { width: 186rpx;}
+.index-links-list .name {color: #333; margin-top: 40rpx; line-height: 1;}
+.index-links-list .zh { font-size: 32rpx;}
+.index-links-list .en { font-size: 20rpx; font-family: Arial, Helvetica, sans-serif; color: #bdbdbd; margin-top: 16rpx;}
 
