--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -209,3 +209,65 @@ background-color: #d8d8d8;
 .item-new text::before { content: 'New'; font-family: Arial, Helvetica, sans-serif; color: #fff; background-color:rgba(242,90,100,1); border-radius: 100px; display:inline-block; right:-3em; font-size: .5em; padding: 0 .6em; line-height: 1.4em;  position: absolute; top: -1em;}
 
 .tit-sort-s { display: block; opacity: .6;}
+
+
+
+
+
+
+
+.indexListBox { position: fixed; left: 0; right: 0; top: 0; bottom: 0; margin: auto; z-index: 99999; background-color: #f7f7f7; overflow-y: auto;-webkit-overflow-scrolling:touch;
+-webkit-transform: translate3d(0,0,0);
+transform: translate3d(0,0,0);
+-webkit-transition: all 500ms;
+transition: all 500ms;
+}
+
+.indexListBox.hidden {
+  -webkit-transform: scale(0.001);
+  transform: scale(0.001);
+  -webkit-transform-origin: top right;
+  transform-origin: top right;
+  top: 110rpx;
+  right: 22rpx;
+  /* opacity: 0; */
+  z-index: 0;
+}
+.page-ad .indexListBox.hidden,
+.page-device .indexListBox.hidden { top:16rpx;}
+
+.indexListBox view,.indexListBox image { box-sizing: border-box; }
+.hide { display: none!important;}
+.index-links-list { text-align: left; padding: 20rpx 24rpx;}
+.index-links-list .item { width: 50%; display: inline-block; padding: 6rpx; vertical-align: top; text-align: center;}
+.index-links-list .in { background-color: #fff; box-shadow: 0 0 1px rgba(0, 0, 0, .05); padding: 55rpx 0 40rpx;}
+.index-links-list .in.hover { background-color: rgba(0, 0, 0, .02);}
+.index-links-list .icoBox { text-align: center; height: 135rpx;}
+.index-links-list .ico { max-width: 100%; width: 174rpx; height: 130rpx;}
+.index-links-list .item-app .ico { width: 219rpx;}
+.index-links-list .item-wxdata .ico { width: 186rpx;}
+.index-links-list .name {color: #333; margin-top: 40rpx; line-height: 1;}
+.index-links-list .zh { font-size: 32rpx;}
+.index-links-list .en { font-size: 20rpx; font-family: Arial, Helvetica, sans-serif; color: #bdbdbd; margin-top: 16rpx;}
+
+.hd-tab { position: relative; z-index: 20;}
+.hd-tab .box { margin-right: 80rpx;}
+.btn-all { width: 80rpx; height: 80rpx; line-height: 80rpx; text-align: center; position: absolute; right: 0; top: 0; font-size: 20rpx; padding: 0; background-color: #f7f7f7; font-size: 0; line-height: 0; color: #f7f7f7; z-index: 10;}
+.btn-all .in { width: 100%; height: 100%; position: relative;}
+.btn-all::before,
+.btn-all::after,
+.btn-all .in::before,
+.btn-all .in::after { content: ''; position: absolute; width: 15rpx; height: 15rpx; border:#69c72b solid 1px; border-radius: 1px;}
+.btn-all::before { left: 20rpx; top: 20rpx;}
+.btn-all::after { right: 20rpx; top: 20rpx;}
+.btn-all .in::before { left: 20rpx; bottom: 20rpx;}
+.btn-all .in::after { right: 20rpx; bottom: 20rpx;}
+
+.btn-all::after,
+.btn-all .in::before,
+.btn-all-hover::before,
+.btn-all-hover .in::after { background-color: #69c72b;}
+
+.btn-all-hover {background-color: rgba(0, 0, 0, .1);}
+.btn-all-hover::after,
+.btn-all-hover .in::before { background-color: transparent;}
