--- a/pages/report/report.wxml
+++ b/pages/report/report.wxml
@@ -5,7 +5,7 @@
   <view class="search">
     <view class="in">
       <icon class="ico" size="16" color="#b2b2b2" type="search"></icon>
-      <input name="skey"  bindconfirm="sumit"   class="ipt" type="text" placeholder="累计2000+份专业研究报告" placeholder-style="opacity:.5" />
+      <input name="skey"  bindconfirm="sumit"   class="ipt" type="text" placeholder="累计2000+份专业研究报告" placeholder-style="opacity:.5" value="{{key}}" />
     </view>
   </view>
 </form>
