--- a/pages/wxsearch/wxsearch.wxml
+++ b/pages/wxsearch/wxsearch.wxml
@@ -4,8 +4,12 @@
 <form bindsubmit="" bindreset="">
    <view class="search">
     <view class="in">
-      <input class="ipt {{isSearchFocus?'focus':''}}" name="skey"  bindinput='researchserch' bindfocus="bindfocus" bindblur="bindblur" bindconfirm="bindSearch"  type="text" placeholder="搜索" placeholder-class="placeholder" />
+      <input class="ipt {{isSearchFocus?'focus':''}}" name="skey"  bindinput='researchserch' bindfocus="bindfocus" bindblur="bindblur" bindconfirm="bindSearch"  type="text" placeholder="搜索" value='{{keyword}}' placeholder-class="placeholder" />
       <icon class="ico" size="16" color="#b2b2b2" type="search" bindtap='searchs'></icon>
+      <!-- <view class="value">
+        <icon class="ico" size="16" color="#b2b2b2" type="search" bindtap='searchs'></icon>
+        <text class="txt">{{keyword?keyword:'搜索'}}</text>
+      </view> -->
     </view>
   </view> 
 </form>
@@ -34,5 +38,7 @@
 </view>
 
 <view class='load'>{{loadName}}</view>
+
+<loading hidden="{{isHiddenLoading}}">搜索中...</loading>
 
 <view class="gototop {{floorstatus?'active':''}}" bindtap="goToTop"></view>
