去掉关于我们会员服务版块
去掉关于我们会员服务版块

--- a/pages/form/form.wxml
+++ b/pages/form/form.wxml
@@ -302,7 +302,7 @@
 
 </view>
 
-<view class='page-item item6'>
+<!--<view class='page-item item6'>
 
   <view class='page-item-in'>
 
@@ -354,7 +354,7 @@
 
   </view>
 
-</view>
+</view>-->
 
 <view class='page-item item7'>
 
